# cleanarch

./: .pylintrc  docker-compose.yml  main.py  pyproject.toml  test.py
init/: schema.sql
src/data/interfaces/: users_repository.py
src/data/usecases/: user_finder.py  user_finder_test.py
src/domain/models/: users.py
src/infra/db/entities/: users.py
src/infra/db/repositories/: users_repository.py  users_repository_test.py
src/infra/db/settings/: connection.py  connection_test.py
